# roundtable

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: mcpb-up-to-date.yml  tests.yml
docs/: decisions.md  design.md  empirical-evidence.md  handoff.md  review-concerns-plan.md
mcpb/: build.sh  manifest.json  pyproject.toml
roundtable/: __init__.py  __main__.py  dispatcher.py  framing.py  mcp_server.py  schemas.py
roundtable/providers/: __init__.py  base.py  deepseek.py  fake.py  google.py  openai.py
scripts/: check_mcpb_freshness.sh
tests/integration/: test_manifest_launch.py  test_mcp_startup.py
tests/live/: test_real_providers.py
tests/unit/: test_context_overflow.py  test_dispatcher.py  test_error_detail.py  test_framing.py  test_n_minus_one_tolerance.py  test_no_disk_writes.py  test_panel_resolution.py  test_placeholder_keys.py  test_schemas.py  test_timeout.py  test_tool_description_sync.py  test_version_sync.py
tests/unit/test_providers/: test_deepseek.py  test_google.py  test_openai.py
