[project]
name = "roundtable-mcp-server"
version = "0.4.0"
description = "MCP server bundled for Claude Desktop"
requires-python = ">=3.11"

# Runtime dependencies for the bundled .mcpb. `uv run` provisions these
# on first launch using the manifest's `command: uv` launcher.
#
# These are a strict subset of the repo-root pyproject.toml — only what
# the running MCP server needs at runtime. Dev tools (pytest, ruff,
# mypy) and the optional anthropic SDK (not used in v0.1; Claude is
# the orchestrator, not a panelist) are excluded.
#
# Drift trap: if P4 (or any future change) wires Claude as a panel
# member, `anthropic` must be added here too, or the bundle will
# crash at runtime far from the PR that introduced the regression.
# The independent-review subagent flagged this risk; keeping the
# omission for now since no source currently imports anthropic.
#
# DeepSeek is intentionally absent: the DeepSeek API is OpenAI-compatible,
# so providers/deepseek.py (P4) will use the `openai` SDK with a
# custom base_url. No separate `deepseek` package.
dependencies = [
    "mcp>=0.9",
    "pydantic>=2.0",
    # Provider SDKs — required by P4. Included now so that when the
    # wiring PR flips _resolve_panel() to use real providers, the
    # bundle does not need a manifest_version bump or rebuild
    # discipline change.
    "openai>=1.50",
    "google-genai>=0.3",
    # Async HTTP transport used by some provider clients and by
    # FakeProvider's test fixtures.
    "httpx>=0.27",
    # .env file loading for development; harmless in production.
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
